[gd_scene load_steps=7 format=3 uid="uid://yp7puejkigwq"]

[ext_resource type="Script" uid="uid://b8smy87045mji" path="res://scripts/main.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://cd7uep4578siu" path="res://images/test_image/background/background_game_playing.png" id="2_jyhfs"]
[ext_resource type="Script" uid="uid://dro5v5muluvjh" path="res://scripts/monster.gd" id="3_h2yge"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xm2m"]
size = Vector2(103.875, 143.75)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sugp2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyhfs"]
bg_color = Color(1, 0.33333334, 0.33333334, 1)

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_h2yge")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_jyhfs")

[node name="Monster" type="Sprite2D" parent="."]
position = Vector2(424, 21.000002)
scale = Vector2(0.98376614, 0.9752066)
centered = false
script = ExtResource("3_h2yge")

[node name="OrderLabel" type="Label" parent="Monster"]
anchors_preset = -1
anchor_left = 0.104
anchor_top = -0.18800001
anchor_right = 0.104
anchor_bottom = -0.18800001
offset_left = 252.968
offset_top = 124.496
offset_right = 446.968
offset_bottom = 192.496

[node name="DrawButton" type="Button" parent="."]
offset_left = 215.0
offset_top = 377.0
offset_right = 292.0
offset_bottom = 443.0
text = "드로우
"

[node name="RerollButton" type="Button" parent="."]
offset_left = 230.0
offset_top = 214.0
offset_right = 270.0
offset_bottom = 245.0
text = "리롤"

[node name="PlayerHand" type="HBoxContainer" parent="."]
offset_left = 331.0
offset_top = 470.0
offset_right = 813.0
offset_bottom = 643.0

[node name="CombineButton" type="Button" parent="."]
offset_left = 202.0
offset_top = 272.0
offset_right = 300.0
offset_bottom = 341.0
text = "조합하기"

[node name="CookingArea" type="Node2D" parent="."]

[node name="IngredientSlot1" type="Area2D" parent="CookingArea"]

[node name="Background" type="ColorRect" parent="CookingArea/IngredientSlot1"]
offset_left = 410.0
offset_top = 272.0
offset_right = 515.0
offset_bottom = 417.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CookingArea/IngredientSlot1"]
position = Vector2(462.0625, 345.125)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="IngredientSlot2" type="Area2D" parent="CookingArea"]

[node name="Background" type="ColorRect" parent="CookingArea/IngredientSlot2"]
offset_left = 533.0
offset_top = 274.0
offset_right = 637.0
offset_bottom = 419.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CookingArea/IngredientSlot2"]
position = Vector2(586, 346)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="IngredientSlot3" type="Area2D" parent="CookingArea"]

[node name="Background" type="ColorRect" parent="CookingArea/IngredientSlot3"]
offset_left = 654.0
offset_top = 273.0
offset_right = 759.0
offset_bottom = 418.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CookingArea/IngredientSlot3"]
position = Vector2(706, 345)
shape = SubResource("RectangleShape2D_0xm2m")

[node name="ResultLabel" type="Label" parent="."]
offset_left = 792.0
offset_top = 281.0
offset_right = 949.0
offset_bottom = 384.0
horizontal_alignment = 1

[node name="OrderTimer" type="Timer" parent="."]

[node name="SatisfactionLabel" type="Label" parent="."]
offset_left = 725.0
offset_top = 56.0
offset_right = 906.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 25
text = "현재 만족도: 50
"

[node name="PauseOverlay" type="CanvasLayer" parent="."]
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="PauseOverlay"]
offset_right = 1154.0
offset_bottom = 647.0
color = Color(0, 0, 0, 0.8117647)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseOverlay"]
custom_minimum_size = Vector2(200, 140)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.5
offset_top = -33.0
offset_right = 54.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseOverlay/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
text = " 계속하기"

[node name="MainMenuButton" type="Button" parent="PauseOverlay/VBoxContainer"]
custom_minimum_size = Vector2(200, 70)
layout_mode = 2
text = "메인메뉴로"

[node name="button_click_sound" type="AudioStreamPlayer2D" parent="."]

[node name="timer" type="AudioStreamPlayer2D" parent="."]

[node name="result_sound" type="AudioStreamPlayer2D" parent="."]

[node name="RerollLabel" type="Label" parent="."]
offset_left = 775.0
offset_top = 349.0
offset_right = 911.0
offset_bottom = 408.0
text = "리롤 남은 횟수:"

[node name="Timerbar" type="ProgressBar" parent="."]
offset_right = 1153.0
offset_bottom = 26.0
theme_override_styles/background = SubResource("StyleBoxFlat_sugp2")
theme_override_styles/fill = SubResource("StyleBoxFlat_jyhfs")
max_value = 180.0
value = 180.0
show_percentage = false

[node name="GameTimerLabel" type="Label" parent="Timerbar"]
custom_minimum_size = Vector2(2000, 50)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.354
anchor_right = 0.512
anchor_bottom = 0.5
offset_left = -819.162
offset_top = -17.0
offset_right = 998.664
offset_bottom = 29.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.99266666, 0.99, 1)
theme_override_font_sizes/font_size = 20
text = "180초
"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="DrawButton" to="." method="_on_draw_button_pressed"]
[connection signal="pressed" from="RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="CombineButton" to="." method="_on_combine_button_pressed"]
